--- a/client/public/index.html
+++ b/client/public/index.html
@@ -14,9 +14,19 @@
       crossorigin="anonymous"
     />
 
+    <!-- Fontawesome-->
     <script src="https://kit.fontawesome.com/001c61a542.js"></script>
    
     <title>Social Network</title>
+
+    <!-- Adsense Code-->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>
+  (adsbygoogle = window.adsbygoogle || []).push({
+    google_ad_client: "ca-pub-1381986909962309",
+    enable_page_level_ads: true
+  });
+</script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
